temp-pod-novol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temp-pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command:
        - "sleep"
        - "604800"
