temp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temp-pod
spec:
  volumes:
    - name: postgres-pvc
      persistentVolumeClaim:
        claimName: postgres-pvc
  containers:
    - name: ubuntu
      image: ubuntu
      volumeMounts:
        - mountPath: "/mnt"
          name: postgres-pvc
