my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: solicitari.rednord.org
    http:
      paths:
      - path: /path-for-web
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: /path-for-api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8000
